<resources>
    <string name="app_name">yunstagram</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_control">Control</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Account</string>

    <string name="title_Login">Login</string>

    <!-- Menu -->
    <string name="menu_share">Share</string>
    <string name="menu_more">More</string>

    <!-- Login -->
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_username">Username</string>
    <string name="login_btn">Log In</string>
    <string name="login_create_account_btn">Create New Account</string>
    <string name="sign_up_btn">Create New Account</string>

    <!-- Profile -->
    <string name="title_profile">Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="account_posts">Posts</string>
    <string name="account_followers">Followers</string>
    <string name="account_following">Following</string>
    <string name="account_edit_profile">Edit Profile</string>
    <string name="account_log_out">Log Out</string>
    <string name="profile_btn_follow">Follow</string>
    <string name="profile_btn_un_follow">Unfollow</string>
    <string name="profile_hint_website">Website</string>
    <string name="profile_hint_biography">Biography</string>
    <string name="profile_change_photo">Change Profile Photo</string>

    <!-- Post -->
    <string name="title_post_create">New Post</string>
    <string name="title_post_edit">Edit Post</string>
    <string name="title_post_detail">Photo</string>
    <string name="edit_post_hint">Write a caption..</string>
    <string name="edit_post_image">Edit</string>
    <string name="post_likes">%d likes</string>
    <string name="message_post_image_upload">Please upload image file</string>

    <!-- Search -->
    <string name="title_search_followers">@string/account_followers</string>
    <string name="title_search_following">@string/account_following</string>
    <string name="title_search_likes">Likes</string>
    <string name="hint_search_user">@string/title_search</string>

    <string name="message_page_building">Coming Soon</string>

</resources>
