<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/title_search"/>


    <item
            android:id="@+id/navigation_control"
            android:icon="@drawable/ic_control_24dp"
            android:title="@string/title_control"/>


    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/title_favorite"/>

    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/ic_account_24dp"
            android:title="@string/title_account"/>

</menu>
