<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="viewmodel" type="com.example.yun.yunstagram.viewmodels.ProfileViewModel"/>
        <variable name="user" type="com.example.yun.yunstagram.data.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.ProfileEditFragment"
            android:padding="32dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/login_hint_username">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{user.username}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layout_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/profile_hint_website">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{user.website}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layout_website"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/profile_hint_biography">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{user.biography}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Save"
                app:layout_constraintTop_toBottomOf="@+id/layout_bio"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>