<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable name="viewmodel" type="com.example.yun.yunstagram.ui.profile.ProfileViewModel"/>
        <variable name="user" type="com.example.yun.yunstagram.data.User"/>
    </data>

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/common_margin">

            <LinearLayout
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/layout_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="@dimen/common_margin_8dp"/>

                <LinearLayout
                        android:id="@+id/layout_profile_info"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                <TextView
                                        android:id="@+id/tv_followers"
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/common_padding_6dp"
                                        android:gravity="center"
                                        android:textStyle="bold"
                                        android:textSize="14sp"
                                        android:text="@{String.valueOf(user.followers_count)}"
                                        tools:text="10"/>

                                <TextView
                                        android:id="@+id/tv_following"
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/common_padding_6dp"
                                        android:gravity="center"
                                        android:textStyle="bold"
                                        android:textSize="14sp"
                                        android:text="@{String.valueOf(user.follows_count)}"
                                        tools:text="10"/>

                                <TextView
                                        android:id="@+id/tv_repositories"
                                        android:padding="@dimen/common_padding_6dp"
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textStyle="bold"
                                        android:textSize="14sp"
                                        android:text="@{String.valueOf(user.media_count)}"
                                        tools:text="10"/>
                            </LinearLayout>

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                <TextView
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/common_padding_6dp"
                                        android:gravity="center"
                                        android:textSize="12sp"
                                        android:text="@string/account_posts"/>

                                <TextView
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/common_padding_6dp"
                                        android:gravity="center"
                                        android:textSize="12sp"
                                        android:text="@string/account_followers"/>

                                <TextView
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/common_padding_6dp"
                                        android:gravity="center"
                                        android:textSize="12sp"
                                        android:text="@string/account_following"/>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                            android:id="@+id/btn_edit_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size"
                            android:text="@string/account_edit_profile"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/layout_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_avatar"
                    app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                        android:id="@+id/tv_biography"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginBottom="4dp"
                        android:text="@{user.biography}"
                        tools:text="Android Developer"/>

                <TextView
                        android:id="@+id/tv_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:linksClickable="true"
                        android:autoLink="web"
                        android:text="@{user.website}"
                        tools:text="https://yyjan.github.io/"/>
            </LinearLayout>

            <ProgressBar
                    android:id="@+id/view_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="@{safeUnbox(viewmodel.loadingState) ? View.VISIBLE : View.GONE}"
                    tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>